# Commitcraft

./: .gitignore  LICENSE  README.md  demo.tape  pyproject.toml  requirements.txt
commitcraft/: __init__.py  config.py  git_utils.py  main.py
commitcraft/providers/: __init__.py  anthropic_api.py  base.py  ollama.py
