[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commitcraft"
version = "0.1.0"
description = "AI commit messages. Fully offline. No API key needed."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "CommitCraft Contributors" }]
keywords = ["git", "commit", "ai", "ollama", "anthropic", "cli", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]

[project.scripts]
cc = "commitcraft.main:app"
commitcraft = "commitcraft.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/commitcraft"
Repository = "https://github.com/yourusername/commitcraft"
Issues = "https://github.com/yourusername/commitcraft/issues"

[tool.setuptools.packages.find]
include = ["commitcraft*"]
